--- a/nailgun/static/templates/cluster/range_field.html
+++ b/nailgun/static/templates/cluster/range_field.html
@@ -2,12 +2,12 @@
 <% var rangeControls = rangeControls || false %>
 <% var disabled = locked ? 'disabled' : '' %>
 <div class="range-row clearfix">
-  <label class="parameter-box clearfix setting">
+  <label class="parameter-box clearfix">
     <div class="parameter-control">
       <input data-range="<%= index %>" class="range" type="text" name="range0" placeholder="127.0.0.1" value="" <%= disabled %> />
     </div>
   </label>
-  <label class="parameter-box clearfix setting">
+  <label class="parameter-box clearfix">
     <div class="parameter-control">
       <input data-range="<%= index %>" class="range" type="text" name="range1" placeholder="127.0.0.1" value="" <%= disabled %> />
     </div>
