Network configuration UI refactoring
blueprint ui-network-configuration-refactoring

Change-Id: I8db049625aff69ed91d071efd3416b3f9b680c0c

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1483,6 +1483,7 @@ label.error {
     max-width: 540px;
     color: @fuel-deep-red;
   }
+  .network-attribute .parameter-name { width: 185px; }
 }
 
 .networks-table, .neutron-parameters {
@@ -1500,16 +1501,8 @@ label.error {
   }
 }
 
-.parameter-control.vlan-tagging {
-  width: 20px;
-}
-
-input.vlan-tagging {
+.vlan-tagging input[type=text] {
   width: 172px;
-}
-
-#networkManager {
-  margin-bottom: 30px;
 }
 
 .nodes-summary-container {
@@ -2714,10 +2707,6 @@ legend {
     margin-top: -6px;
     margin-right: 0px;
   }
-}
-
-.networks-sub-title {
-  width: 185px;
 }
 
 hr.slim {
