--- a/nailgun/static/templates/cluster/network_tab.html
+++ b/nailgun/static/templates/cluster/network_tab.html
@@ -1,20 +1,22 @@
-<% var disabled = locked ? 'disabled' : '' %>
 <div class="network-settings wrapper <%= locked ? 'changes-locked' : '' %>">
   <h3 data-i18n="cluster_page.network_tab.title"></h3>
   <% if (!loading || loading.state() != 'pending') { %>
-    <% if (net_provider == 'nova_network') { %>
-      <% var managers = {'FlatDHCPManager': $.t('cluster_page.network_tab.flatdhcp_manager'), 'VlanManager': $.t('cluster_page.network_tab.vlan_manager') } %>
-      <div class="radio-checkbox-group net-manager">
-        <% _.each(_.keys(managers), function(manager) { %>
+    <% if (provider == 'nova_network') { %>
+      <% var managers = {
+        FlatDHCPManager: $.t('cluster_page.network_tab.flatdhcp_manager'),
+        VlanManager: $.t('cluster_page.network_tab.vlan_manager')
+      } %>
+      <div class="radio-checkbox-group">
+        <% _.each(managers, function(label, value) { %>
           <div class="item-box">
             <label class="parameter-box clearfix">
               <div class="parameter-control">
                 <div class="custom-tumbler">
-                  <input type="radio" name="net-manager" value="<%- manager %>" <%= locked ? 'disabled' : '' %>>
+                  <input type="radio" name="net-manager" value="<%= value %>" <%= locked ? 'disabled' : '' %>>
                   <!-- [if !IE |(gte IE 9)]> --><span>&nbsp;</span><!-- <![endif] -->
                 </div>
               </div>
-              <div class="parameter-name"><%= managers[manager] %></div>
+              <div class="parameter-name"><%- label %></div>
             </label>
           </div>
         <% }) %>
@@ -24,8 +26,7 @@
       <span class="network-segment-type"><%- $.t('cluster_page.network_tab.neutron_segmentation', {segment_type: segment_type}) %></span>
     <% } %>
     <div class="networks-table"></div>
-    <div class="nova-nameservers"></div>
-    <div class="neutron-parameters"></div>
+    <div class="networking-parameters"></div>
   <% } else { %>
     <div class="progress-bar">
       <div class="progress progress-striped progress-success active"><div class="bar"></div></div>
@@ -40,9 +41,9 @@
   <div class="row">
     <div class="page-control-box">
       <div class="page-control-button-placeholder">
-        <button data-i18n="cluster_page.network_tab.verify_networks_button" class="btn verify-networks-btn" <%= verificationLocked ? 'disabled' : '' %>></button>
-        <button data-i18n="common.cancel_changes_button" class="btn btn-revert-changes" <%= locked || !hasChanges? 'disabled' : '' %>></button>
-        <button data-i18n="common.save_settings_button" class="btn btn-success apply-btn" <%= locked || !hasChanges ? 'disabled' : '' %>></button>
+        <button data-i18n="cluster_page.network_tab.verify_networks_button" class="btn verify-networks-btn"></button>
+        <button data-i18n="common.cancel_changes_button" class="btn btn-revert-changes"></button>
+        <button data-i18n="common.save_settings_button" class="btn btn-success apply-btn"></button>
       </div>
     </div>
   </div>
