--- a/nailgun/static/templates/cluster/range_field.html
+++ b/nailgun/static/templates/cluster/range_field.html
@@ -1,13 +1,13 @@
 <% var index = index || 0 %>
 <% var rangeControls = rangeControls || false %>
 <% var disabled = locked ? 'disabled' : '' %>
-<div class="range-row clearfix">
-  <label class="parameter-box clearfix setting">
+<div class="range-row">
+  <label class="parameter-box clearfix">
     <div class="parameter-control">
       <input data-range="<%= index %>" class="range" type="text" name="range0" placeholder="127.0.0.1" value="" <%= disabled %> />
     </div>
   </label>
-  <label class="parameter-box clearfix setting">
+  <label class="parameter-box clearfix">
     <div class="parameter-control">
       <input data-range="<%= index %>" class="range" type="text" name="range1" placeholder="127.0.0.1" value="" <%= disabled %> />
     </div>
