--- a/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
@@ -10,7 +10,8 @@
       <% var descriptions = {
         'nova-network': $.t("dialog.create_cluster_wizard.network.nova_network"),
         'neutron-gre': $.t("dialog.create_cluster_wizard.network.neutr_gre"),
-        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan")
+        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan"),
+        'neutron-vxlan': $.t("dialog.create_cluster_wizard.network.neutr_vxlan")
       } %>
       <% _.each(managers, function(manager) { %>
         <label class="parameter-box clearfix">
