--- a/nailgun/static/templates/cluster/actions_tab.html
+++ b/nailgun/static/templates/cluster/actions_tab.html
@@ -34,4 +34,17 @@
       </form>
     </div>
   </div>
+  <div class="row-fluid">
+    <div class="span12 action-item-placeholder">
+      <form onsubmit="return false" class="upgrade-cluster-form">
+        <h4 data-i18n="cluster_page.actions_tab.upgrade_cluster"></h4>
+          <div class="action-item-controls">
+            <select name="release"></select>
+            <div class="text-error hide"></div>
+            <button class="btn btn-success upgrade-btn"><span data-i18n="common.upgrade_button"></span></button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam dapibus urna in accumsan. Morbi ante sem, interdum sit amet leo et, venenatis consectetur orci. Aliquam porttitor sit amet magna a tincidunt. Sed sed faucibus dolor. Aenean quis urna ornare, gravida eros vel, interdum sapien. Nulla facilisi. Praesent hendrerit lacus turpis, nec adipiscing ante suscipit et. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse hendrerit nibh vel orci rhoncus dapibus. Nunc sed tincidunt nibh, et congue dolor. Maecenas viverra at nibh vel pretium. Ut id velit metus. Phasellus vel nisl varius, tempus massa ac, mattis ipsum. Etiam dapibus blandit diam, nec semper justo euismod sed. </p>
+          </div>
+      </form>
+    </div>
+  </div>
 </div>
