GRE network on UI
Change-Id: Ia09cc5f87135c5a0d5fd4ab647f847c0045b0556

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1351,7 +1351,7 @@ label.error {
     }
   }
   .range-row { margin-left: 199px; }
-  .range-row, .vlan-tagging {
+  .range-row, .vlan-tagging, .gre-network {
     label {
       display: inline-block;
       margin-bottom: 0;
@@ -1383,6 +1383,7 @@ label.error {
     margin-left: 0 !important;
     .btn-link { padding: 0; }
   }
+  select[name=gre_network] { width: 186px; }
 }
 
 .nodes-summary-container {
