GRE network on UI
Change-Id: Ia09cc5f87135c5a0d5fd4ab647f847c0045b0556

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1380,6 +1380,7 @@ label.error {
     margin-left: 0 !important;
     .btn-link {padding: 0;}
   }
+  select[name=gre_network] { width: 186px; }
 }
 
 .parameter-control.vlan-tagging {
@@ -2298,7 +2299,6 @@ input.error:focus {
 .parameter-name {
   .float-mixin;
   min-width: 120px;
-  max-height: 30px;
   .box-sizing-mixin;
   font-weight: bold;
   margin: 7px 14px 0 0;
