GRE network on UI
Change-Id: Ia09cc5f87135c5a0d5fd4ab647f847c0045b0556

--- a/nailgun/static/templates/cluster/network.html
+++ b/nailgun/static/templates/cluster/network.html
@@ -1,6 +1,6 @@
 <% if (shownAttributes.length) { %>
 
-  <legend class="networks"><%- $.t('network.' + network.get('name')) %></legend>
+  <legend class="networks <%- network.get('name') %>"><%- $.t('network.' + network.get('name')) %></legend>
 
   <% var disabled = locked ? 'disabled' : '' %>
   <% var labels = {
