--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -1376,7 +1376,7 @@ label.error {
     }
   }
   .range-row { margin-left: 199px; }
-  .range-row, .vlan-tagging {
+  .range-row, .vlan-tagging, .gre-network {
     label {
       display: inline-block;
       margin-bottom: 0;
@@ -1408,6 +1408,7 @@ label.error {
     margin-left: 0 !important;
     .btn-link { padding: 0; }
   }
+  select[name=gre_network] { width: 186px; }
 }
 
 .nodes-summary-container {
