"Neutron with VXLAN segmentation" supporting added in web interface
Change-Id: I135a1b91030c712ed2cb0b141a6547bf831958d3
Implements: blueprint neutron-vxlan-support

--- a/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
@@ -6,11 +6,12 @@
 <form class="form-horizontal" onsubmit="return false">
   <fieldset>
     <div class="control-group">
-      <% var managers = ['nova-network', 'neutron-gre', 'neutron-vlan'] %>
+      <% var managers = ['nova-network', 'neutron-gre', 'neutron-vlan', 'neutron-vxlan'] %>
       <% var descriptions = {
         'nova-network': $.t("dialog.create_cluster_wizard.network.nova_network"),
         'neutron-gre': $.t("dialog.create_cluster_wizard.network.neutr_gre"),
-        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan")
+        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan"),
+        'neutron-vxlan': $.t("dialog.create_cluster_wizard.network.neutr_vxlan")
       } %>
       <% _.each(managers, function(manager) { %>
         <label class="parameter-box clearfix">
