--- a/nailgun/static/templates/cluster/actions_tab.html
+++ b/nailgun/static/templates/cluster/actions_tab.html
@@ -34,4 +34,18 @@
       </form>
     </div>
   </div>
+  <div class="row-fluid">
+    <div class="span12 action-item-placeholder">
+      <form onsubmit="return false" class="upgrade-cluster-form">
+        <h4 data-i18n="cluster_page.actions_tab.upgrade_cluster"></h4>
+        <div class="action-item-controls">
+          <select name="upgrade_release"></select>
+          <button class="btn btn-success upgrade-btn"><span data-i18n="common.upgrade_button"></span></button>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam dapibus urna i
+          n accumsan. Morbi ante sem, interdum sit amet leo et, venenatis consectetur orci. Aliquam porttitor
+          sit amet magna a tincidunt. </p>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
