--- a/nailgun/static/templates/cluster/actions_tab.html
+++ b/nailgun/static/templates/cluster/actions_tab.html
@@ -34,4 +34,16 @@
       </form>
     </div>
   </div>
+  <div class="row-fluid">
+    <div class="span12 action-item-placeholder">
+      <form onsubmit="return false" class="upgrade-cluster-form">
+        <h4 data-i18n="cluster_page.actions_tab.upgrade_cluster"></h4>
+        <div class="action-item-controls">
+          <select name="upgrade_release" class="upgrade-form-controls"></select>
+          <button class="btn btn-success upgrade-btn upgrade-form-controls"><span data-i18n="common.upgrade_button"></span></button>
+          <div class="text-info latest-release-info" data-i18n="cluster_page.actions_tab.no_releases_to_upgrade_message"></div>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
