--- a/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/network.html
@@ -6,11 +6,12 @@
 <form class="form-horizontal" onsubmit="return false">
   <fieldset>
     <div class="control-group">
-      <% var managers = ['nova-network', 'neutron-gre', 'neutron-vlan'] %>
+      <% var managers = ['nova-network', 'neutron-gre', 'neutron-vlan', 'neutron-nsx'] %>
       <% var descriptions = {
         'nova-network': $.t("dialog.create_cluster_wizard.network.nova_network"),
         'neutron-gre': $.t("dialog.create_cluster_wizard.network.neutr_gre"),
-        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan")
+        'neutron-vlan': $.t("dialog.create_cluster_wizard.network.neutr_vlan"),
+        'neutron-nsx' : $.t("dialog.create_cluster_wizard.network.neutr_nsx")
       } %>
       <% _.each(managers, function(manager) { %>
         <label class="parameter-box clearfix">
