--- a/nailgun/static/templates/cluster/actions_tab.html
+++ b/nailgun/static/templates/cluster/actions_tab.html
@@ -34,4 +34,27 @@
       </form>
     </div>
   </div>
+<% if (cluster.get('status') != 'new') { %>
+  <div class="row-fluid">
+    <div class="span12 action-item-placeholder">
+      <form onsubmit="return false" class="update-cluster-form">
+        <h4 data-i18n="cluster_page.actions_tab.update_cluster"></h4>
+        <div class="action-item-controls">
+          <% if (cluster.get('status') == 'error') { %>
+            <button class="btn btn-success rollback-btn actions_controls" data-i18n="common.rollback_button"></button>
+            <div class="text-error" data-i18n="cluster_page.actions_tab.rollback_message"></div>
+          <% } else { %>
+            <% if (releases.length > 0) { %>
+              <select class="actions_controls" name="update_release"></select>
+              <button class="btn btn-success update-btn" disabled data-i18n="common.update_button"></button>
+              <p data-i18n="cluster_page.actions_tab.update_release_message"></p>
+            <% } else { %>
+              <div class="text-info" data-i18n="cluster_page.actions_tab.no_releases_to_update_message"></div>
+            <% } %>
+          <% } %>
+        </div>
+      </form>
+    </div>
+  </div>
+<% } %>
 </div>
