--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -382,6 +382,13 @@ label {cursor: default;}
   .action-btn {margin-top: 7px;}
 }
 
+#content .register-trial {
+  margin-bottom: 0px;
+  p {
+    margin: 0px;
+  }
+}
+
 // Footer
 // -------------------------
 .container,
