--- a/nailgun/static/templates/dialogs/display_changes.html
+++ b/nailgun/static/templates/dialogs/display_changes.html
@@ -8,15 +8,15 @@
   <% var nodes = cluster.get('nodes') %>
   <% var addedNodes = nodes.where({pending_addition: true}) %>
   <% if (addedNodes.length) { %>
-    <div class="deploy-task-name"><%- $.t("dialog.display_changes.added_node", {nodesCount: addedNodes.length }) %></div>
+    <div class="deploy-task-name"><%- $.t("dialog.display_changes.added_node", {count: addedNodes.length }) %></div>
   <% } %>
   <% var deletedNodes = nodes.where({pending_deletion: true}) %>
   <% if (deletedNodes.length) { %>
-    <div class="deploy-task-name"><%- $.t("dialog.display_changes.deleted_node", {nodesCount: deletedNodes.length }) %></div>
+    <div class="deploy-task-name"><%- $.t("dialog.display_changes.deleted_node", {count: deletedNodes.length }) %></div>
   <% } %>
   <% var reconfiguredNodes = nodes.filter(function(node) {return !node.get('pending_addition') && !node.get('pending_deletion') && !_.isEmpty(node.get('pending_roles'));}) %>
   <% if (reconfiguredNodes.length) { %>
-    <div class="deploy-task-name"><%- $.t("dialog.display_changes.reconfigured_node", {nodesCount: reconfiguredNodes.length }) %></div>
+    <div class="deploy-task-name"><%- $.t("dialog.display_changes.reconfigured_node", {count: reconfiguredNodes.length }) %></div>
   <% } %>
 
   <% var settingsChangesDescriptions = {
@@ -40,35 +40,25 @@
   <% } %>
 
   <!-- Warnings -->
-  <%
-    var warnings = {
-     'controller': $.t("dialog.display_changes.warnings.controller", {nodeSize: size}),
-     'compute': $.t("dialog.display_changes.warnings.compute")
-    };
-    var warning = null, canDeploy = true;
+  <% var warnings = [];
+    if (cluster.needsRedeployment()) { warnings.push($.t("dialog.display_changes.redeployment_needed")); }
+    cluster.get('release').get('roles').each(function(role) {
+      var nodesWithRole = cluster.get('nodes').filter(function(node) {return (node.get('pending_addition') || !node.get('pending_deletion')) && node.hasRole(role.get('name'));});
+      var roleMinimalAmount = role.getMinimalAmount();
+      if (!_.isNull(roleMinimalAmount) && roleMinimalAmount > nodesWithRole.length) {
+        warnings.push($.t("dialog.display_changes.missing_role_warning", {count: roleMinimalAmount, role: role.get('label')}));
+      }
+    });
   %>
-  <% if (cluster.needsRedeployment()) { %>
+  <% if (warnings.length) { %>
     <hr class="slim">
-    <div class="deploy-task-notice">
-        <i class="icon-attention"></i>
-        <span data-i18n="dialog.display_changes.redeployment_needed"></span>
-    </div>
-  <% } %>
-  <%
-    if (cluster.get('nodes').nodesAfterDeploymentWithRole('controller') < size) {
-      canDeploy = false;
-      warning = 'controller';
-    } else if (!cluster.get('nodes').nodesAfterDeploymentWithRole('compute') && cluster.get('settings').get('common').libvirt_type.value !== 'vcenter') {
-      warning = 'compute';
-    }
-  %>
-  <% if (warning) { %>
-    <hr class="slim">
-    <div class="alert alert-error"><%- warnings[warning] %></div>
+    <% _.each(warnings, function(warning) { %>
+      <div class="alert alert-error"><%- warning %></div>
+    <% }) %>
   <% } %>
 
 </div>
 <div class="modal-footer">
   <button class="btn" data-dismiss="modal" data-i18n="common.cancel_button"></button>
-  <button class="btn btn-<%= warning ? 'danger' : 'success' %> start-deployment-btn <%= canDeploy ? '' : 'disabled' %>" data-i18n="dialog.display_changes.deploy"></button>
+  <button class="btn btn-<%= warnings.length ? 'danger' : 'success' %> start-deployment-btn" data-i18n="dialog.display_changes.deploy"></button>
 </div>
