--- a/nailgun/static/templates/dialogs/display_changes.html
+++ b/nailgun/static/templates/dialogs/display_changes.html
@@ -69,6 +69,6 @@
 
 </div>
 <div class="modal-footer">
-  <button class="btn" data-dismiss="modal" data-i18n="common.cancel_button"></button>
+  <button class="btn cancel-deploy-btn" data-dismiss="modal" data-i18n="common.cancel_button"></button>
   <button class="btn btn-<%= warning ? 'danger' : 'success' %> start-deployment-btn <%= canDeploy ? '' : 'disabled' %>" data-i18n="dialog.display_changes.deploy"></button>
 </div>
