Trial banner styles
Change-Id: Ia9fa17b6676b595365da161508da99c7dea49bcb

--- a/nailgun/static/templates/clusters/register_trial.html
+++ b/nailgun/static/templates/clusters/register_trial.html
@@ -1,6 +1,7 @@
-<div class="alert alert-info alert-dismissable register-trial">
+<div class="alert alert-info alert-dismissable register-trial" style="background-color: #70869B; border: medium none; color: #e8f1f6; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);">
     <button type="button" class="close" aria-hidden="true">&times;</button>
     <p>
-        <%- $.t('clusters_page.register_trial_message_click') %><a target="_blank" class="registration-link" href=""><%- $.t('clusters_page.register_trial_link_label') %></a><%- $.t('clusters_page.register_trial_message_close') %>
+        <i class="icon-mirantis" style="font-size: 56px; float: left; margin: -8px; margin-right: 8px;"></i>
+        <%- $.t('clusters_page.register_trial_message_click') %><a target="_blank" class="registration-link" href="" style="color: #e8d88e;"><%- $.t('clusters_page.register_trial_link_label') %></a><%- $.t('clusters_page.register_trial_message_close') %>
     </p>
 </div>
