Fixed layout for japan localization
Closes-Bug:#1312194

Change-Id: I82e488a21173d087bb966930f75f1e3ceeeef349

--- a/nailgun/static/css/styles.less
+++ b/nailgun/static/css/styles.less
@@ -2058,6 +2058,7 @@ select[name=release] option {
   margin: 10px 20px;
   .position(relative, @top: 0px, @left: 0px);
   .alert {
+    clear: left;
     margin-bottom: 0px;
     margin-top: 10px;
     padding: 8px 35px 10px 14px;
@@ -2073,6 +2074,8 @@ select[name=release] option {
 
 .verification-text-placeholder {
   display: block;
+  width: 330px;
+  float: left;
   height: 160px;
   li {
     list-style: none outside none;
