Wizard: disable vCenter option for HA environment
Closes-Bug:#1312653

Change-Id: I8c7eda80d265b9b7b9648645ea7ea7ac2b3c1f4e

--- a/nailgun/static/templates/dialogs/create_cluster_wizard/compute.html
+++ b/nailgun/static/templates/dialogs/create_cluster_wizard/compute.html
@@ -1,4 +1,9 @@
-<div class="alert hide" style="margin:0">
+<% if (vCenterDisabledDueToClusterMode) { %>
+  <div class="alert" style="margin:0">
+    <%- $.t("dialog.create_cluster_wizard.compute.disabled_vcenter_alert") %>
+  </div>
+<% } %>
+<div class="alert vcenter-alert hide" style="margin:0">
   <%- $.t("dialog.create_cluster_wizard.compute.vcenter_warning") %>
 </div>
 <form class="form-horizontal compute-step" onsubmit="return false">
